# Delivery_project

backend/: .gitignore  manage.py  pyproject.toml
backend/Delivery_backend/: asgi.py  settings.py  urls.py  wsgi.py
